# HyperClip

./: .gitattributes  .gitignore  .tmp_kill.ps1  CLAUDE.md  Cargo.toml  HYPERCLIP_RULES.md  README.md  USER_GUIDE.md  _check_cpu.ps1  _gen_overlay.ps1  add_potoken.py  apply_pot_main.py  apply_potoken.py  bench_filter.ps1  bench_full.ps1  c1.txt  channel_page.html  channels2.json  channels_detail.json  check_gpu.ps1  check_output.ps1  check_react.mjs  check_video.ps1  check_zustand.mjs  cleanup.ps1  console-window.html  count_errors.js  count_frames.ps1  debug_out.txt  debug_out2.txt  detections.json  detections3.json  electron-builder.yml  eslint.config.js  eslint_errors.txt  export_projects_template.py  extract_id.py  find_errors.js  find_logs.ps1  find_processes.ps1  (+80 more)
.claude/: settings.json  settings.local.json  settings.local.template.json
.hyperclip/: channels.json  subscriptions.json  tunnel.txt  workspaces.json
crates/hyperclip_ipc/: Cargo.toml
crates/hyperclip_ipc/src/: chrome_watcher.rs  cookies.rs  cookies_dpapi.rs  cookies_sqlite.rs  detection.rs  download_progress.rs  error.rs  ffmpeg.rs  innertube_client.rs  innertube_helper.js  innertube_pool.rs  lib.rs  poller.rs  render_progress.rs  store.rs  system.rs  thumbnail.rs  token_manager.rs  types.rs  worker_pool.rs  youtube.rs
crates/hyperclip_ipc/src/store/: channels.rs  keys.rs  paths.rs  projects.rs  rendered_videos.rs  settings.rs  workspace.rs
crates/hyperclip_ipc/tests/: cookies_dpapi_test.rs  cookies_test.rs  download_integration_test.rs  error_test.rs  ffmpeg_test.rs  store_test.rs  types_test.rs  worker_pool_test.rs  youtube_test.rs
data/: history.json
dist-electron/: main.js  preload.js
docs/: AUTO_INGESTION_TECH_OVERVIEW.md  BOTTOM_BAR_LAYOUT.md  BUG_LAGGY_RENDER.md  CHROME_WATCHER_AND_COOKIE_RECOVERY.md  CUSTOMER_PATCH_GUIDE.md  CUSTOMER_SETUP_GUIDE.md  DELIVERY_PLAN.md  DETECTION_LATENCY.md  E2E_BOTTOM_BAR_FLOW.md  ERROR_CODES.md  FFMPEG_SPEED_DEEP_DIVE.md  FINAL_TECH_STACK_AND_FLOW.md  HOW_IT_WORKS.md  OPERATOR_GUIDE.md  POLLING_DEBUG_2026_06_10.md  PRICING_TABLE.md  PYTHON_MIGRATION_STATUS.md  RENDER_BENCHMARK.md  RENDER_GPU_CONTENTION.md  RENDER_PIPELINE_GUIDE.md  RTX5080_NVENC_OPTIMIZATION.md  TECHNOLOGY_OVERVIEW.md  YOUTUBE_API_SCALE_PLAN.md  YOUTUBE_DOWNLOAD_2026.md  index.html  privacy.html  reliability_plan.md  render-optimization-plan.md
electron/: console-preload.js  console-window-state.json  global.d.ts  main.ts  preload.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json
hyperclip/: HyperClip.sln
license-server/: index.js
patch_update/: README.txt  auth.rs  sound_service.py  youtube.rs
resources/: innertube_helper.js
scratch/: analyze_customer_timeline.py  analyze_history_detailed.py  analyze_large_log.py  analyze_pts.py  analyze_stutter_video.py  analyze_user_render_logs.py  analyze_user_render_logs2.py  analyze_user_render_logs3.py  benchmark_bottom_bar.py  benchmark_crop_methods_new.py  benchmark_ffmpeg_optimization.py  benchmark_gpu_methods.py  benchmark_nvenc_settings.py  benchmark_overlay_crop.py  check_binary_time.py  check_data_ws.py  check_exact_test_pts.py  check_ffmpeg_decoders.py  check_file_times.py  check_folders.py  check_identical_images.py  check_identical_outputs.py  check_pts_direct.py  check_star_frames.py  check_ws_file.py  compare_frames.py  compare_images.py  cuda_yuv.md5  customer_log_details.txt  cuvid.md5  cuvid_yuv.md5  debug_filter.txt  domestic_speedtest.py  extract_frames.py  (+113 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/hyperclip-core/: Cargo.toml
src-tauri/crates/hyperclip-core/src/: channel.rs  error.rs  lib.rs  paths.rs  workspace.rs
src-tauri/crates/hyperclip-core/tests/: workspace_serde.rs
src-tauri/crates/hyperclip-ipc/: Cargo.toml
src-tauri/crates/hyperclip-ipc/src/: lib.rs
src-tauri/crates/hyperclip-store/: Cargo.toml
src-tauri/crates/hyperclip-store/src/: channels.rs  lib.rs  workspaces.rs
src-tauri/crates/hyperclip-store/tests/: workspaces_roundtrip.rs
src-tauri/crates/hyperclip-store/tests/fixtures/: sample_workspaces.json
src-tauri/src/: commands.rs  launcher.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  channel.rs  settings.rs  system.rs  workspace.rs
(+673 files in other folders)
