[package]
name = "hyperclip-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
hyperclip_ipc = { path = "../crates/hyperclip_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-util = "0.7"
