[package]
name = "hyperclip-tauri"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hyperclip-tauri"
path = "src/main.rs"

[[bin]]
name = "hyperclip-launcher"
path = "src/launcher.rs"

[dependencies]
hyperclip_ipc = { path = "../crates/hyperclip_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-util = "0.7"
ureq = "2.12"
urlencoding = "2.1"

[build-dependencies]
winres = "0.1"

