[package]
name = "hyperclip_ipc"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "process", "io-util"] }
tokio-util = "0.7"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
serde_json = { workspace = true }
