[package]
name = "hyperclip_ipc"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "process", "io-util"] }
tokio-util = "0.7"
rand = "0.8"
regex = "1.10"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "process", "io-util"] }
